--- a/src/main/resources/views/login.view.fxml
+++ b/src/main/resources/views/login.view.fxml
@@ -6,42 +6,34 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane
-        maxHeight="-Infinity"
-        maxWidth="-Infinity"
-        minHeight="-Infinity"
-        minWidth="-Infinity"
-        prefHeight="200.0"
-        prefWidth="400.0"
         xmlns="http://javafx.com/javafx/8"
         xmlns:fx="http://javafx.com/fxml/1"
-        fx:controller="controllers.LoginViewController">
+        stylesheets="@../Styles.css"
+        fx:controller="controllers.LoginViewController"
+        prefHeight="200"
+        prefWidth="400">
     <children>
-
         <GridPane
-                layoutX="112.0"
-                layoutY="155.0"
                 AnchorPane.bottomAnchor="0.0"
                 AnchorPane.leftAnchor="0.0"
                 AnchorPane.rightAnchor="0.0"
                 AnchorPane.topAnchor="0.0">
 
             <columnConstraints>
-                <ColumnConstraints
-                        hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES"/>
             </columnConstraints>
 
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints prefHeight="25.0" vgrow="SOMETIMES" />
+                <RowConstraints prefHeight="40.0" vgrow="SOMETIMES" />
+                <RowConstraints prefHeight="25.0" vgrow="SOMETIMES" />
             </rowConstraints>
 
             <children>
                 <Label
-                        text="Введите имя пользователя и пароль">
-                    <font> <Font size="18.0" /> </font>
-                    <GridPane.margin> <Insets left="25.0" /> </GridPane.margin>
-                </Label>
+                        GridPane.halignment="CENTER"
+                        text="Введите имя пользователя и пароль"
+                        textAlignment="CENTER"/>
 
                 <GridPane GridPane.rowIndex="1">
 
@@ -104,7 +96,7 @@
                         <Button
                                 mnemonicParsing="false"
                                 onAction="#registration"
-                                prefWidth="100.0"
+                                prefWidth="120.0"
                                 text="Регистрация"
                                 GridPane.halignment="CENTER" />
 
@@ -112,7 +104,7 @@
                                 defaultButton="true"
                                 mnemonicParsing="false"
                                 onAction="#enter"
-                                prefWidth="100.0"
+                                prefWidth="120.0"
                                 text="Вход"
                                 GridPane.columnIndex="1"
                                 GridPane.halignment="CENTER" />
@@ -121,7 +113,7 @@
                                 cancelButton="true"
                                 mnemonicParsing="false"
                                 onAction="#exit"
-                                prefWidth="100.0"
+                                prefWidth="120.0"
                                 text="Выход"
                                 GridPane.columnIndex="2"
                                 GridPane.halignment="CENTER" />
