--- a/src/main/resources/views/registration.view.fxml
+++ b/src/main/resources/views/registration.view.fxml
@@ -7,43 +7,36 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane
-        maxHeight="-Infinity"
-        maxWidth="-Infinity"
-        minHeight="-Infinity"
-        minWidth="-Infinity"
         prefHeight="200.0"
         prefWidth="400.0"
         xmlns="http://javafx.com/javafx/8"
         xmlns:fx="http://javafx.com/fxml/1"
+        stylesheets="@../Styles.css"
         fx:controller="controllers.RegistrationViewController">
     <children>
 
         <GridPane
-                layoutX="72.0"
-                layoutY="47.0"
                 AnchorPane.leftAnchor="0.0"
                 AnchorPane.rightAnchor="0.0"
-                AnchorPane.topAnchor="0.0">
+                AnchorPane.topAnchor="0.0"
+                AnchorPane.bottomAnchor="0.0">
 
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints prefWidth="100.0" />
             </columnConstraints>
-            <AnchorPane.bottomAnchor>0.0</AnchorPane.bottomAnchor>
 
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
 
             <children>
 
                 <TextField
                         fx:id="loginTEdit"
-                        maxWidth="300.0"
-                        prefHeight="25.0"
-                        prefWidth="200.0"
+                        maxWidth="250"
                         promptText="Логин"
                         GridPane.halignment="CENTER"
                         GridPane.hgrow="SOMETIMES"
@@ -54,8 +47,7 @@
 
                 <PasswordField
                         fx:id="passTEdit"
-                        maxWidth="300.0"
-                        prefWidth="100.0"
+                        maxWidth="250"
                         promptText="Пароль"
                         GridPane.halignment="CENTER"
                         GridPane.rowIndex="1"
@@ -65,8 +57,7 @@
 
                 <PasswordField
                         fx:id="repeatPassTEdit"
-                        maxWidth="300.0"
-                        prefWidth="100.0"
+                        maxWidth="250"
                         promptText="Пароль"
                         GridPane.halignment="CENTER"
                         GridPane.rowIndex="2"
