add teacher panel

--- a/src/main/resources/views/main-panel.view.fxml
+++ b/src/main/resources/views/main-panel.view.fxml
@@ -81,6 +81,7 @@
             <children>
                 <Button
                         text="Преподаватели"
+                        onAction="#openTeachersPanel"
                         prefWidth="140"/>
                 <Button
                         text="Аудитории"
