add audience panel view

--- a/src/main/resources/views/main-panel.view.fxml
+++ b/src/main/resources/views/main-panel.view.fxml
@@ -85,6 +85,7 @@
                         prefWidth="140"/>
                 <Button
                         text="Аудитории"
+                        onAction="#openAudiencesPanel"
                         prefWidth="140"
                         GridPane.columnIndex="1"/>
                 <Button
