add time table panel

--- a/src/main/resources/views/main-panel.view.fxml
+++ b/src/main/resources/views/main-panel.view.fxml
@@ -90,6 +90,7 @@
                         GridPane.columnIndex="1"/>
                 <Button
                         text="Время"
+                        onAction="#openTimePanel"
                         prefWidth="140"
                         GridPane.columnIndex="2"/>
                 <Button
