start add discipline panel

--- a/src/main/resources/views/main-panel.view.fxml
+++ b/src/main/resources/views/main-panel.view.fxml
@@ -99,6 +99,7 @@
                         GridPane.rowIndex="1"/>
                 <Button
                         text="Дисциплины"
+                        onAction="#openDisciplinesPanel"
                         prefWidth="140"
                         GridPane.columnIndex="1"
                         GridPane.rowIndex="1"/>
