add group panel

--- a/src/main/resources/views/main-panel.view.fxml
+++ b/src/main/resources/views/main-panel.view.fxml
@@ -105,6 +105,7 @@
                         GridPane.rowIndex="1"/>
                 <Button
                         text="Группы"
+                        onAction="#openGroupPanel"
                         prefWidth="140"
                         GridPane.columnIndex="2"
                         GridPane.rowIndex="1"/>
