add exit action to main panel

--- a/src/main/resources/views/main-panel.view.fxml
+++ b/src/main/resources/views/main-panel.view.fxml
@@ -111,6 +111,7 @@
                         GridPane.rowIndex="1"/>
                 <Button
                         text="Выход"
+                        onAction="#exit"
                         prefWidth="140"
                         GridPane.columnIndex="3"
                         GridPane.rowIndex="1"/>
