add default-cancel btns

--- a/src/main/resources/views/audiences-panel.view.fxml
+++ b/src/main/resources/views/audiences-panel.view.fxml
@@ -46,6 +46,7 @@
                 prefWidth="150"/>
 
         <Button text="Выход"
+                cancelButton="true"
                 onAction="#exit"
                 prefWidth="150"/>
     </HBox>
