--- a/src/main/resources/views/info-dialog.view.fxml
+++ b/src/main/resources/views/info-dialog.view.fxml
@@ -19,6 +19,7 @@
     <Label fx:id="msgLabel"
             wrapText="true"/>
     <Button text="OK"
+            defaultButton="true"
             prefWidth="140"
             onAction="#close"/>
 
