--- a/src/main/resources/views/admin.view.fxml
+++ b/src/main/resources/views/admin.view.fxml
@@ -77,6 +77,7 @@
                                         prefHeight="25.0"
                                         prefWidth="100.0"
                                         text="Добавить"
+                                        defaultButton="true"
                                         GridPane.halignment="CENTER"
                                         GridPane.valignment="CENTER" />
                                 <Button
@@ -103,6 +104,7 @@
                                         prefHeight="25.0"
                                         prefWidth="100.0"
                                         text="Выход"
+                                        cancelButton="true"
                                         GridPane.halignment="CENTER"
                                         GridPane.rowIndex="3"
                                         GridPane.valignment="CENTER" />
