--- a/src/main/resources/views/input-dialog.view.fxml
+++ b/src/main/resources/views/input-dialog.view.fxml
@@ -30,10 +30,12 @@
 
         <Button text="OK"
                 prefWidth="140"
-                onAction="#apply"/>
+                onAction="#apply"
+                defaultButton="true"/>
         <Button text="Выход"
                 prefWidth="140"
-                onAction="#close"/>
+                onAction="#close"
+                cancelButton="true"/>
     </HBox>
 
 </VBox>
