--- a/src/main/resources/views/audience-editor.view.fxml
+++ b/src/main/resources/views/audience-editor.view.fxml
@@ -17,7 +17,7 @@
     <padding><Insets top="10" bottom="10" left="10" right="10"/> </padding>
 
     <TextField
-            fx:id="id"
+            fx:id="num"
             promptText="№"/>
 
     <ComboBox
