--- a/src/main/resources/views/login.view.fxml
+++ b/src/main/resources/views/login.view.fxml
@@ -25,7 +25,7 @@
 
             <rowConstraints>
                 <RowConstraints prefHeight="25.0" vgrow="SOMETIMES" />
-                <RowConstraints prefHeight="40.0" vgrow="SOMETIMES" />
+                <RowConstraints prefHeight="80.0" vgrow="SOMETIMES" />
                 <RowConstraints prefHeight="25.0" vgrow="SOMETIMES" />
             </rowConstraints>
 
@@ -42,15 +42,25 @@
                     </columnConstraints>
 
                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
                     </rowConstraints>
 
                     <children>
                         <ComboBox
-                                fx:id="loginCBox"
+                                fx:id="schemeCBox"
                                 maxWidth="300.0"
                                 GridPane.halignment="RIGHT">
+
+                            <GridPane.margin> <Insets right="15.0" /> </GridPane.margin>
+                        </ComboBox>
+
+                        <ComboBox
+                                fx:id="loginCBox"
+                                maxWidth="300.0"
+                                GridPane.halignment="RIGHT"
+                                GridPane.rowIndex="1">
 
                             <GridPane.margin> <Insets right="15.0" /> </GridPane.margin>
                         </ComboBox>
@@ -60,20 +70,27 @@
                                 maxWidth="300.0"
                                 promptText="Пароль"
                                 GridPane.halignment="RIGHT"
-                                GridPane.rowIndex="1">
+                                GridPane.rowIndex="2">
 
                             <GridPane.margin> <Insets right="15.0" /> </GridPane.margin>
                         </PasswordField>
 
                         <Label
-                                text="Логин">
+                                text="СУБД">
+                            <GridPane.margin> <Insets left="15.0" /> </GridPane.margin>
+                            <font> <Font size="14.0" /> </font>
+                        </Label>
+
+                        <Label
+                                text="Логин"
+                                GridPane.rowIndex="1">
                             <GridPane.margin> <Insets left="15.0" /> </GridPane.margin>
                             <font> <Font size="14.0" /> </font>
                         </Label>
 
                         <Label
                                 text="Пароль"
-                                GridPane.rowIndex="1">
+                                GridPane.rowIndex="2">
                             <font> <Font size="14.0" /> </font>
                             <GridPane.margin> <Insets left="15.0" /> </GridPane.margin>
                         </Label>
