--- a/src/main/resources/views/disciplines-panel.view.fxml
+++ b/src/main/resources/views/disciplines-panel.view.fxml
@@ -38,32 +38,38 @@
         <ComboBox fx:id="directions"
                 prefWidth="150"/>
         <Button text="Добавить"
+                fx:id="addDr"
                 onAction="#addDirection"
                 GridPane.columnIndex="1"
                 GridPane.halignment="CENTER"
                 prefWidth="140"/>
         <Button text="Изменить"
+                fx:id="editDr"
                 onAction="#editDirection"
                 GridPane.columnIndex="2"
                 prefWidth="140"/>
         <Button text="Удалить"
+                fx:id="delDr"
                 onAction="#deleteDirection"
                 GridPane.columnIndex="3"
                 GridPane.halignment="CENTER"
                 prefWidth="140"/>
 
-       <Button text="Добавить"
+        <Button text="Добавить"
+                fx:id="addDs"
                 onAction="#addDiscipline"
                 GridPane.rowIndex="1"
                 GridPane.halignment="CENTER"
                 GridPane.valignment="BOTTOM"
                 prefWidth="140"/>
-       <Button text="Изменить"
+        <Button text="Изменить"
+                fx:id="editDs"
                 onAction="#editDiscipline"
                 GridPane.rowIndex="2"
                 GridPane.halignment="CENTER"
                 prefWidth="140"/>
-       <Button text="Удалить"
+        <Button text="Удалить"
+                fx:id="delDs"
                 onAction="#deleteDiscipline"
                 GridPane.rowIndex="3"
                 GridPane.halignment="CENTER"
@@ -77,12 +83,14 @@
 
         <Button text="&gt;&gt;"
                 onAction="#addToUseList"
+                fx:id="addToUseListBtn"
                 GridPane.columnIndex="2"
                 GridPane.rowIndex="1"
                 GridPane.halignment="CENTER"
                 GridPane.valignment="BOTTOM"/>
         <Button text="&lt;&lt;"
                 onAction="#removeFromUseList"
+                fx:id="removeFromUseList"
                 GridPane.columnIndex="2"
                 GridPane.rowIndex="2"
                 GridPane.halignment="CENTER"
