--- a/src/main/resources/views/admin.view.fxml
+++ b/src/main/resources/views/admin.view.fxml
@@ -68,6 +68,7 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
 
                             <children>
@@ -100,13 +101,23 @@
                                         GridPane.valignment="CENTER" />
                                 <Button
                                         mnemonicParsing="false"
+                                        onAction="#openMainPanel"
+                                        prefHeight="25.0"
+                                        prefWidth="100.0"
+                                        text="Вход в АРМ"
+                                        cancelButton="true"
+                                        GridPane.halignment="CENTER"
+                                        GridPane.rowIndex="3"
+                                        GridPane.valignment="CENTER" />
+                                <Button
+                                        mnemonicParsing="false"
                                         onAction="#exit"
                                         prefHeight="25.0"
                                         prefWidth="100.0"
                                         text="Выход"
                                         cancelButton="true"
                                         GridPane.halignment="CENTER"
-                                        GridPane.rowIndex="3"
+                                        GridPane.rowIndex="4"
                                         GridPane.valignment="CENTER" />
                             </children>
                         </GridPane>
