--- a/src/main/resources/views/audience-editor.view.fxml
+++ b/src/main/resources/views/audience-editor.view.fxml
@@ -20,10 +20,22 @@
             fx:id="num"
             promptText="№"/>
 
-    <ComboBox
-            fx:id="audienceType"
-            promptText="Тип аудитории"
-            prefWidth="Infinity"/>
+    <HBox
+            spacing="10">
+
+        <padding><Insets top="10" bottom="10"/> </padding>
+
+        <ComboBox
+                fx:id="audienceType"
+                promptText="Тип аудитории"
+                prefWidth="280"/>
+
+        <Button
+                text="+"
+                onAction="#addAudienceType"/>
+    </HBox>
+
+
 
     <TextField
             fx:id="capacity"
