finished generic editor

--- a/src/main/resources/views/generic/main-panel.view.fxml
+++ b/src/main/resources/views/generic/main-panel.view.fxml
@@ -20,7 +20,7 @@
             </items>
         </Menu>
 
-        <Menu text="Редактировать">
+        <Menu text="Редактировать" fx:id="editMenu">
             <items>
                 <MenuItem text="Добавить"
                         onAction="#add"/>
